Expandable/collapsable search/filter bar - Fixes #21. Optimised and cleaned up custom scroll bar on filters.

--- a/ui/src/static/css/App.css
+++ b/ui/src/static/css/App.css
@@ -24,11 +24,6 @@ a {
   height: 100%;
 }
 
-header {
-  background: #292929;
-  position: relative;
-  height: 380px;
-}
 footer {
   background: #292929;
   padding: 5px 20px;
